# SMake

./: CMakeLists.txt  build_dependencies.ps1
SMake/: CMakeLists.txt
SMake/include/SMake/: SMake.hh  starter.hh
SMake/include/private/Utils/: FileHandler.hh
SMake/lib/: FileHandler.cc  starter.cc
SMakeExec/: CMakeLists.txt  SMake.rc
SMakeExec/lib/: entry.cc
SMakeTests/: CMakeLists.txt
